--- a/myportfolio/styles/site-plan.css
+++ b/myportfolio/styles/site-plan.css
@@ -1,13 +1,12 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-
+@import url('https://fonts.google.com/share?selection.family=Cal+Sans,wght@0,400;0,700;1,400&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #F7D1CD   ;
+  --secondary-color: #E8C2CA ;
+  --accent1-color: #D1B3C4;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
