--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -4,211 +4,252 @@ Any spaces in your font name should be replaced with a +.
 Fonts are separated by a & */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lato:wght@300;400;700&display=swap');
 
-
 :root {
-  /* change the values below to your colors from your palette */
-  --primary-color: #F7D1CD   ;
-  --secondary-color: #E8C2CA ;
+  /* Site color palette */
+  --primary-color: #F7D1CD;
+  --secondary-color: #E8C2CA;
   --accent1-color: #D1B3C4;
   --accent2-color: white;
 
-  /* change the values below to your chosen font(s) */
+  /* Fonts */
   --heading-font: 'Oswald', sans-serif;
   --paragraph-font: Lato, Helvetica, sans-serif;
 
-  /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: black;  /* headlines on a white background */ 
-  --headline-color-on-color: #FFFFFF; /* headlines on a colored background */ 
-  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: white  ;
+  /* Color contrast choices */
+  --headline-color-on-white: black;
+  --headline-color-on-color: #FFFFFF;
+  --paragraph-color-on-white: black;
+  --paragraph-color-on-color: #FFFFFF;
+  --paragraph-background-color: white;
+
   --nav-link-color: black;
   --nav-background-color: white;
   --nav-hover-link-color: black;
   --nav-hover-background-color: black;
 }
 
-
-/*  Look around below...but DON'T CHANGE ANYTHING! */
-
 body {
   background-color: #fcfbfb;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: var(--paragraph-font);
   max-width: 960px;
   margin: 0;
   padding: 0;
   font-size: 22px;
   text-align: center;
 }
+
 img {
   display: block;
   margin: 0 auto;
   max-width: 300px;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
 }
+
 h2 {
   text-align: center;
   margin: 0;
 }
+
 hr {
   height: 3px;
   margin: 35px 0;
   background: var(--accent1-color);
 }
+
 header {
   padding: 1em;
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
 }
-header > h1, header > h2 {
+
+header > h1,
+header > h2 {
   color: var(--headline-color-on-color);
 }
+
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
 }
+
 .colors {
   width: 100%;
   min-width: 350px;
   margin: 30px auto;
   text-align: center;
 }
+
 .colors th {
   background-color: #999;
 }
-.colors td{
+
+.colors td {
   width: 25%;
   height: 3em;
 }
+
 .primary {
   background-color: var(--primary-color);
 }
+
 .secondary {
   background-color: var(--secondary-color);
 }
+
 .accent1 {
   background-color: var(--accent1-color);
 }
-.accent2{
+
+.accent2 {
   background-color: var(--accent2-color);
 }
+
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
 }
+
+/* ✅ FIXED: Combined nav block */
 nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
-}
-nav  {
-  list-style-type: none;
   display: flex;
+  justify-content: center; /* optional for spacing links */
+  gap: 1em; /* optional: space between links */
 }
+
 nav a {
-  padding:1em;
+  padding: 1em;
   min-width: 120px;
-  color: #fcfbfb;
-  text-align: center;
   text-decoration: none;
-  padding: 35px;
-}
-nav a:link, nav a:visited {
   color: var(--nav-link-color);
 }
+
+nav a:link,
+nav a:visited {
+  color: var(--nav-link-color);
+}
+
 nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
+
 .sitemap {
   display: grid;
   justify-content: center;
-
   grid-template-columns: repeat(6, 15%);
   grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas: ". . home home . ."
+  grid-template-areas:
+    ". . home home . ."
     ". . . top . ."
     ". left left right right ."
     "page2 page2 . . page3 page3";
 }
+
 .sitemap > div {
   text-align: center;
 }
+
 .sm-home {
   grid-area: home;
   background-color: #ccc;
   line-height: 3em;
 }
+
 .sm-page2 {
   grid-area: page2;
   background-color: #ccc;
   line-height: 3em;
 }
+
 .sm-page3 {
   grid-area: page3;
   background-color: #ccc;
   line-height: 3em;
 }
+
 .top {
   grid-area: top;
   border-left: 1px solid;
 }
+
 .left {
   grid-area: left;
   border-top: 1px solid;
   border-left: 1px solid;
 }
+
 .right {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
 @media screen and (max-width: 900px) {
-  #hero, .home-grid {
-      display: block;
-      height: auto;
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
   }
-  nav, footer {
-      flex-direction: column;
-  }
-  nav a {
-      display: block;
-      padding: 15px;
-  }
-  #hero {
-      margin-top: 0;
-  }
-  #hero-msg {
-      margin-top: 0;
-  }
-  #hero-msg h4 {
-      display: none;
-  }
-  #hero-msg h1 {
-      color: #6f7364;
-  }
-  .home-title {
-      font-size: 25px;
-  }
-  .rivers-card, .camping-card, .rapids-card { 
-      margin: 50px auto;
-      width: 60%;
-  }
-  #background {
-      display: none;
-  }
-  .mountains, .msg {
-      width: 80%;
-      display: block;
-      margin: 0 auto;
-  }
+
+  nav,
   footer {
-      margin-top: 25px;
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+
+  #hero {
+    margin-top: 0;
+  }
+
+  #hero-msg {
+    margin-top: 0;
+  }
+
+  #hero-msg h4 {
+    display: none;
+  }
+
+  #hero-msg h1 {
+    color: #6f7364;
+  }
+
+  .home-title {
+    font-size: 25px;
+  }
+
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+
+  #background {
+    display: none;
+  }
+
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    margin-top: 25px;
   }
 }
