--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,86 +1,139 @@
-form {
-    max-width: 500px;
-    margin: 2rem auto;
-    padding: 1rem;
-    background: #f9f9f9;
-    border-radius: 5px;
-  }
-  
-  form p {
-    margin-bottom: 1em;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 0.5em;
-    font-weight: bold;
-  }
-  
-  input, textarea {
-    width: 100%;
-    padding: 0.5em;
-    box-sizing: border-box;
-  }
-  
-  button {
-    padding: 0.7em 1.5em;
-    background-color: #005f73;
-    color: white;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0a9396;
-  }
-/* <length> value */
-.content {
-    max-width: 1600px;  
-    margin: 0 auto;
-    text-align: center;
-  }
-  .background {
-height: 725px;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lato:wght@300;400;700&display=swap');
 
-  body {
-    background-color: #fcfbfb; 
+:root {
+  --primary-color: #F7D1CD;
+  --secondary-color: #E8C2CA;
+  --accent1-color: #D1B3C4;
+  --accent2-color: white;
+
+  --heading-font: 'Oswald', sans-serif;
+  --paragraph-font: Lato, Helvetica, sans-serif;
+
+  --headline-color-on-white: black;
+  --headline-color-on-color: #FFFFFF;
+  --paragraph-color-on-white: black;
+  --paragraph-color-on-color: #FFFFFF;
+  --paragraph-background-color: white;
+
+  --nav-link-color: black;
+  --nav-background-color: white;
+  --nav-hover-link-color: black;
+  --nav-hover-background-color: black;
 }
+
+body {
+  background-color: #fcfbfb; 
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color-on-white);
+}
+
+#content {
+  max-width: 1600px;  
+  margin: 0 auto;
+  text-align: center;
+}
+
 header {
-    background-color:rgba(20,30,13, .7);
+  background-color: rgba(20,30,13, 0.7);
+  color: var(--headline-color-on-color);
+  font-family: var(--heading-font);
 }
+
+nav a {
+  text-align: center;
+  color: var(--nav-link-color);
+  text-decoration: none;
+  padding: 1em;
+}
+
 nav a:hover {
-    background-color: black;
-    color: #d9c2a3;
+  background-color: var(--nav-hover-background-color);
+  color: var(--nav-hover-link-color);
 }
 
 .icon {
-    width: 80px;
+  width: 80px;
 }
-nav a {
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;
+
+.logo {
+  width: 80px;
 }
+
+#hero-img {
+  width: 100%;
+}
+
+#background {
+  height: 725px;
+}
+
+footer {
+  background-color: var(--paragraph-background-color);
+  color: var(--headline-color-on-color);
+  padding: 1rem;
+  text-align: center;
+}
+
 footer p {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
+
+footer p a {
+  color: var(--headline-color-on-color);
+  text-decoration: none;
+}
+
 footer p a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
+
+form {
+  max-width: 500px;
+  margin: 2rem auto;
+  padding: 1rem;
+  background: #f9f9f9;
+  border-radius: 5px;
+}
+
+form p {
+  margin-bottom: 1em;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 0.7em 1.5em;
+  background-color: #005f73;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0a9396;
+}
+
 #feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;
-    /* make this element invisible until we are ready for it */
-    display: none;      
+  background-color: antiquewhite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: .5em;
+  display: none;      
 }
+
 .moveDown {
-    margin-top: 3em;
+  margin-top: 3em;
 }
-    
-  
