--- a/myportfolio/styles/styles.css
+++ b/myportfolio/styles/styles.css
@@ -205,7 +205,7 @@ footer a:hover {
   transform: translateY(-5px);
 }
 
-.project-card:img {
+.project-card img {
   width: 100%;
   height: auto;
   border-radius: 6px;
